docs/apache-airflow-providers-google/12.0.0/_sources/_api/airflow/providers/google/cloud/hooks/alloy_db/index.rst.txt
:py:mod:`airflow.providers.google.cloud.hooks.alloy_db`
=======================================================

.. py:module:: airflow.providers.google.cloud.hooks.alloy_db

.. autoapi-nested-parse::

   Module contains a Google Alloy DB Hook.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.hooks.alloy_db.AlloyDbHook




.. py:class:: AlloyDbHook(*args, **kwargs)


   Bases: :py:obj:`airflow.providers.google.common.hooks.base_google.GoogleBaseHook`

   Google Alloy DB Hook.

   .. py:method:: get_alloy_db_admin_client()

      Retrieve AlloyDB client.


   .. py:method:: wait_for_operation(timeout, operation)

      Wait for long-lasting operation to complete.


   .. py:method:: create_cluster(cluster_id, cluster, location, project_id = PROVIDE_PROJECT_ID, request_id = None, validate_only = False, retry = DEFAULT, timeout = None, metadata = ())

      Create an Alloy DB cluster.

      .. seealso::
          For more details see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.CreateClusterRequest

      :param cluster_id: Required. ID of the cluster to create.
      :param cluster: Required. Cluster to create. For more details please see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.Cluster
      :param location: Required. The ID of the Google Cloud region where the cluster is located.
      :param project_id: Optional. The ID of the Google Cloud project where the cluster is located.
      :param request_id: Optional. The ID of an existing request object.
      :param validate_only: Optional. If set, performs request validation, but does not actually execute
          the create request.
      :param retry: Optional. Designation of what errors, if any, should be retried.
      :param timeout: Optional. The timeout for this request.
      :param metadata: Optional. Strings which should be sent along with the request as metadata.


   .. py:method:: create_secondary_cluster(cluster_id, cluster, location, project_id = PROVIDE_PROJECT_ID, request_id = None, validate_only = False, retry = DEFAULT, timeout = None, metadata = ())

      Create a secondary Alloy DB cluster.

      .. seealso::
          For more details see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.CreateClusterRequest

      :param cluster_id: Required. ID of the cluster to create.
      :param cluster: Required. Cluster to create. For more details please see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.Cluster
      :param location: Required. The ID of the Google Cloud region where the cluster is located.
      :param project_id: Optional. The ID of the Google Cloud project where the cluster is located.
      :param request_id: Optional. The ID of an existing request object.
      :param validate_only: Optional. If set, performs request validation, but does not actually execute
          the create request.
      :param retry: Optional. Designation of what errors, if any, should be retried.
      :param timeout: Optional. The timeout for this request.
      :param metadata: Optional. Strings which should be sent along with the request as metadata.


   .. py:method:: get_cluster(cluster_id, location, project_id = PROVIDE_PROJECT_ID, retry = DEFAULT, timeout = None, metadata = ())

      Retrieve an Alloy DB cluster.

      .. seealso::
          For more details see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.GetClusterRequest

      :param cluster_id: Required. ID of the cluster to create.
      :param location: Required. The ID of the Google Cloud region where the cluster is located.
      :param project_id: Optional. The ID of the Google Cloud project where the cluster is located.
      :param retry: Optional. Designation of what errors, if any, should be retried.
      :param timeout: Optional. The timeout for this request.
      :param metadata: Optional. Strings which should be sent along with the request as metadata.


   .. py:method:: update_cluster(cluster_id, cluster, location, update_mask = None, project_id = PROVIDE_PROJECT_ID, allow_missing = False, request_id = None, validate_only = False, retry = DEFAULT, timeout = None, metadata = ())

      Update an Alloy DB cluster.

      .. seealso::
          For more details see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.UpdateClusterRequest

      :param cluster_id: Required. ID of the cluster to update.
      :param cluster: Required. Cluster to create. For more details please see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.Cluster
      :param location: Required. The ID of the Google Cloud region where the cluster is located.
      :param update_mask: Optional. Field mask is used to specify the fields to be overwritten in the
          Cluster resource by the update.
      :param request_id: Optional. The ID of an existing request object.
      :param validate_only: Optional. If set, performs request validation, but does not actually execute
          the create request.
      :param project_id: Optional. The ID of the Google Cloud project where the cluster is located.
      :param allow_missing: Optional. If set to true, update succeeds even if cluster is not found.
          In that case, a new cluster is created and update_mask is ignored.
      :param retry: Optional. Designation of what errors, if any, should be retried.
      :param timeout: Optional. The timeout for this request.
      :param metadata: Optional. Strings which should be sent along with the request as metadata.


   .. py:method:: delete_cluster(cluster_id, location, project_id = PROVIDE_PROJECT_ID, request_id = None, etag = None, validate_only = False, force = False, retry = DEFAULT, timeout = None, metadata = ())

      Delete an Alloy DB cluster.

      .. seealso::
          For more details see API documentation:
          https://cloud.google.com/python/docs/reference/alloydb/latest/google.cloud.alloydb_v1.types.DeleteClusterRequest

      :param cluster_id: Required. ID of the cluster to delete.
      :param location: Required. The ID of the Google Cloud region where the cluster is located.
      :param project_id: Optional. The ID of the Google Cloud project where the cluster is located.
      :param request_id: Optional. The ID of an existing request object.
      :param etag: Optional. The current etag of the Cluster. If an etag is provided and does not match the
          current etag of the Cluster, deletion will be blocked and an ABORTED error will be returned.
      :param validate_only: Optional. If set, performs request validation, but does not actually execute
          the create request.
      :param force: Optional. Whether to cascade delete child instances for given cluster.
      :param retry: Optional. Designation of what errors, if any, should be retried.
      :param timeout: Optional. The timeout for this request.
      :param metadata: Optional. Strings which should be sent along with the request as metadata.



